fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -14,10 +14,8 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    height: 1800px;
     background-color: black;
-    margin: 0px;
-    width: 100vw;
+    width: 100%;
     background-image: url("assets/images/hero_bg.jpg");
     background-attachment: fixed;
     background-position: center;
@@ -30,7 +28,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
 }
 
 .nav {
@@ -43,9 +41,8 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     margin-top: -50px;
-    margin-right: 5px;
 }
 
 .nav-item {
@@ -60,7 +57,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     align-self: center;
     align-items: center;
     justify-content: center;
@@ -71,7 +68,6 @@ body {
     color: var(--main-text-color);
     font-size: 5rem;
     text-align: center;
-    max-width: 100%;
     text-shadow: var(--text-shadow);
 }
 
@@ -88,7 +84,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     flex: 1 1 0%;
-    width: 100vw;
+    width: 100%;
 }
 
 .app {
@@ -98,7 +94,7 @@ body {
     border-radius: .7em;
     min-height: 200px;
     min-width: 200px;
-    width: 100vw;
+    width: 100%;
     padding: 15px;
     flex: 1 0 0%;
     margin: 40px;
@@ -160,13 +156,7 @@ h1 {
 
 .whatIDo {
     padding-top: 10px;
-}
-
-.whatIDoList {
-    list-style: circle;
-    list-style-position: inside;
-    padding-left: 20px;
-    float: inline-end;
+    max-width: 90%;
 }
 
 .what {
@@ -181,8 +171,8 @@ h1 {
     background-color: black;
     display: flex;
     flex-wrap: wrap;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
     position: relative;
 }
 
@@ -192,7 +182,7 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    max-width: 100vw;
+    /* max-width: 100%; */
     position: relative;
 }
 
@@ -202,7 +192,7 @@ h1 {
     align-items: center;
     justify-content: center;
     background-color: black;
-    width: 100vw;
+    width: 100%;
     color: var(--main-text-color);
     font-size: .5em;
 }
@@ -216,7 +206,7 @@ h1 {
     padding-bottom: 15px;
     font-size: .7em;
     display: block;
-    width: 100vw;
+    width: 100%;
     height: 100%;
 }
 
@@ -267,7 +257,7 @@ nav a:hover {
     font-family: 'Roboto', sans-serif;
     font-weight: 800;
     text-shadow: var(--text-shadow);
-    width: 100vw;
+    width: 100%;
 }
 
 /* Handles screens sized less than 1000px */
@@ -299,6 +289,12 @@ nav a:hover {
 @media screen and (max-width: 310px) {
     .nav-item {
         margin-right: -20px;
+    }
+
+
+    .whatIDo {
+        padding-top: 10px;
+        margin-left: -10px;
     }
 
     .hero-text h1 {
